@@ -1,10 +1,19 @@
 Revision history for libev, a high-performance and full-featured event loop.
 
+	- fix compilation of select backend in fd_set mode when NFDBITS is
+          missing (to get it to compile on QNX, reported by Rodrigo Campos).
+        - better select-nfds handling when select backend is in fd_set mode.
+        - diagnose fd_set overruns when select backend is in fd_set mode.
+        - due to a thinko, instead of disabling everything but
+          select on the borked OS X platform, everything but select was
+          allowed (reported by Emanuele Giaquinta).
         - actually verify that local and remote port are matching in
           libev's socketpair emulation, which makes denial-of-service
           attacks harder (but not impossible - it's windows). Make sure
           it even works under vista, which thinks that getpeer/sockname
           should return fantasy port numbers.
+        - include "libev" all assertion messages for potentially
+          clearer diagnostics.
 
 3.51 Wed Dec 24 23:00:11 CET 2008
         - fix a bug where an inotify watcher was added twice, causing
